Uploaded image for project: 'Qt Creator'
  1. Qt Creator
  2. QTCREATORBUG-9323

Crash when looking up using declaration

XMLWordPrintable

    • b4c3cef863935ae94ada04a162212d40db17ec6a

      Thread 12 (Thread 0x7fa7b1ffb700 (LWP 23855)):
      #0  0x00007fa8cc78188d in __libc_waitpid (pid=<optimized out>, stat_loc=<optimized out>, options=<optimized out>) at ../sysdeps/unix/sysv/linux/waitpid.c:41
              resultvar = <optimized out>
              oldtype = 0
              result = <optimized out>
      #1  0x0000000000410a86 in signalHandler (signal=11) at /home/nikolai/dev/creator/qtcreator-cron/src/tools/qtcreatorcrashhandler/crashhandlersetup.cpp:76
              pid = 24699
      
      #2  <signal handler called>
      No locals.
      #3  0x00007fa8b7668b6e in CPlusPlus::LookupContext::lookupByUsing (this=this@entry=0xe0b6e00, name=name@entry=0x7fa7d16050f8, scope=scope@entry=0x7fa7d1143220) at /home/nikolai/dev/creator/qtcreator-cron/src/libs/cplusplus/LookupContext.cpp:252
      
              q = <optimized out>
              u = 0x7fa7d2a392f0
              i = <optimized out>
              count = 13
      
              candidates = {{p = {static shared_null = {ref = {atomic = {_q_value = -1}}, alloc = 0, begin = 0, end = 0, array = {0x0}}, d = 0x7fa8ccd0dfd0 <QListData::shared_null>}, d = 0x7fa8ccd0dfd0 <QListData::shared_null>}}
      #4  0x00007fa8b76692f0 in CPlusPlus::LookupContext::lookup (this=0xe0b6e00, name=0x7fa7d16050f8, scope=0x7fa7d1143220) at /home/nikolai/dev/creator/qtcreator-cron/src/libs/cplusplus/LookupContext.cpp:385
              candidates = {{p = {static shared_null = {ref = {atomic = {_q_value = -1}}, alloc = 0, begin = 0, end = 0, array = {0x0}}, d = 0x7fa8ccd0dfd0 <QListData::shared_null>}, d = 0x7fa8ccd0dfd0 <QListData::shared_null>}}
      
      #5  0x00007fa8b7a023b9 in CppTools::CheckSymbols::checkName (this=0xe0b6dc0, ast=0x7fa7d1ba4020, scope=0x7fa7d1143220) at /home/nikolai/dev/creator/qtcreator-cron/src/plugins/cpptools/cppchecksymbols.cpp:791
      
      No locals.
      #6  0x00007fa8b7a0254c in CppTools::CheckSymbols::visit (this=0xe0b6dc0, ast=0x7fa7d1ba4020) at /home/nikolai/dev/creator/qtcreator-cron/src/plugins/cpptools/cppchecksymbols.cpp:804
      
      No locals.
      #7  0x00007fa8b75e90b3 in CPlusPlus::SimpleNameAST::accept0 (this=0x7fa7d1ba4020, visitor=0xe0b6dc0) at /home/nikolai/dev/creator/qtcreator-cron/src/libs/3rdparty/cplusplus/ASTVisit.cpp:608
      
      No locals.
      #8  0x00007fa8b75e3754 in CPlusPlus::AST::accept (this=0x7fa7d1ba4020, visitor=0xe0b6dc0) at /home/nikolai/dev/creator/qtcreator-cron/src/libs/3rdparty/cplusplus/AST.cpp:51
      No locals.
      #9  0x00007fa8b75e8521 in accept (visitor=0xe0b6dc0, ast=<optimized out>) at /home/nikolai/dev/creator/qtcreator-cron/src/libs/3rdparty/cplusplus/AST.h:93
      No locals.
      #10 CPlusPlus::NamedTypeSpecifierAST::accept0 (this=0x7fa7d1ba4038, visitor=0xe0b6dc0) at /home/nikolai/dev/creator/qtcreator-cron/src/libs/3rdparty/cplusplus/ASTVisit.cpp:395
      
      No locals.
      #11 0x00007fa8b75e3754 in CPlusPlus::AST::accept (this=0x7fa7d1ba4038, visitor=0xe0b6dc0) at /home/nikolai/dev/creator/qtcreator-cron/src/libs/3rdparty/cplusplus/AST.cpp:51
      No locals.
      #12 0x00007fa8b7a05c8d in CPlusPlus::ASTVisitor::accept<CPlusPlus::SpecifierAST*> (this=0xe0b6dc0, it=0x7fa7d1ba4048) at /home/nikolai/dev/creator/qtcreator-cron/src/libs/3rdparty/cplusplus/ASTVisitor.h:70
      No locals.
      #13 0x00007fa8b7a00f55 in CppTools::CheckSymbols::visit (this=0xe0b6dc0, ast=0x7fa7d1ba4268) at /home/nikolai/dev/creator/qtcreator-cron/src/plugins/cpptools/cppchecksymbols.cpp:523
              declrIdNameAST = 0x0
      #14 0x00007fa8b75e7529 in CPlusPlus::SimpleDeclarationAST::accept0 (this=0x7fa7d1ba4268, visitor=0xe0b6dc0) at /home/nikolai/dev/creator/qtcreator-cron/src/libs/3rdparty/cplusplus/ASTVisit.cpp:104
      No locals.
      #15 0x00007fa8b75e3754 in CPlusPlus::AST::accept (this=0x7fa7d1ba4268, visitor=0xe0b6dc0) at /home/nikolai/dev/creator/qtcreator-cron/src/libs/3rdparty/cplusplus/AST.cpp:51
      No locals.
      #16 0x00007fa8b75e81c1 in accept (visitor=0xe0b6dc0, ast=<optimized out>) at /home/nikolai/dev/creator/qtcreator-cron/src/libs/3rdparty/cplusplus/AST.h:93
      No locals.
      #17 CPlusPlus::DeclarationStatementAST::accept0 (this=0x7fa7d1ba4298, visitor=0xe0b6dc0) at /home/nikolai/dev/creator/qtcreator-cron/src/libs/3rdparty/cplusplus/ASTVisit.cpp:334
      
      No locals.
      #18 0x00007fa8b75e3754 in CPlusPlus::AST::accept (this=0x7fa7d1ba4298, visitor=0xe0b6dc0) at /home/nikolai/dev/creator/qtcreator-cron/src/libs/3rdparty/cplusplus/AST.cpp:51
      No locals.
      #19 0x00007fa8b75e7f59 in accept (visitor=0xe0b6dc0, ast=<optimized out>) at /home/nikolai/dev/creator/qtcreator-cron/src/libs/3rdparty/cplusplus/AST.h:93
      
      No locals.
      #20 accept<CPlusPlus::StatementAST*> (visitor=0xe0b6dc0, it=0x7fa7d1ba42a8) at /home/nikolai/dev/creator/qtcreator-cron/src/libs/3rdparty/cplusplus/AST.h:99
      
      No locals.
      #21 CPlusPlus::CompoundStatementAST::accept0 (this=0x7fa7d1ba3fd0, visitor=0xe0b6dc0) at /home/nikolai/dev/creator/qtcreator-cron/src/libs/3rdparty/cplusplus/ASTVisit.cpp:290
      No locals.
      #22 0x00007fa8b75e3754 in CPlusPlus::AST::accept (this=0x7fa7d1ba3fd0, visitor=0xe0b6dc0) at /home/nikolai/dev/creator/qtcreator-cron/src/libs/3rdparty/cplusplus/AST.cpp:51
      No locals.
      #23 0x00007fa8b75e8c02 in accept (visitor=0xe0b6dc0, ast=<optimized out>) at /home/nikolai/dev/creator/qtcreator-cron/src/libs/3rdparty/cplusplus/AST.h:93
      
      No locals.
      #24 CPlusPlus::IfStatementAST::accept0 (this=0x7fa7d1ba3ef0, visitor=0xe0b6dc0) at /home/nikolai/dev/creator/qtcreator-cron/src/libs/3rdparty/cplusplus/ASTVisit.cpp:518
      No locals.
      #25 0x00007fa8b75e3754 in CPlusPlus::AST::accept (this=0x7fa7d1ba3ef0, visitor=0xe0b6dc0) at /home/nikolai/dev/creator/qtcreator-cron/src/libs/3rdparty/cplusplus/AST.cpp:51
      No locals.
      #26 0x00007fa8b75e7f59 in accept (visitor=0xe0b6dc0, ast=<optimized out>) at /home/nikolai/dev/creator/qtcreator-cron/src/libs/3rdparty/cplusplus/AST.h:93
      No locals.
      #27 accept<CPlusPlus::StatementAST*> (visitor=0xe0b6dc0, it=0x7fa7d1861a30) at /home/nikolai/dev/creator/qtcreator-cron/src/libs/3rdparty/cplusplus/AST.h:99
      No locals.
      #28 CPlusPlus::CompoundStatementAST::accept0 (this=0x7fa7d1b71c50, visitor=0xe0b6dc0) at /home/nikolai/dev/creator/qtcreator-cron/src/libs/3rdparty/cplusplus/ASTVisit.cpp:290
      No locals.
      #29 0x00007fa8b75e3754 in CPlusPlus::AST::accept (this=0x7fa7d1b71c50, visitor=0xe0b6dc0) at /home/nikolai/dev/creator/qtcreator-cron/src/libs/3rdparty/cplusplus/AST.cpp:51
      No locals.
      #30 0x00007fa8b7a03463 in CppTools::CheckSymbols::visit (this=0xe0b6dc0, ast=0x7fa7d1b71c18) at /home/nikolai/dev/creator/qtcreator-cron/src/plugins/cpptools/cppchecksymbols.cpp:1050
      
              thisFunction = 0x7fa7d1b71c18
              processEntireDeclr = false
              locals = {uses = {{d = 0x7fa7b1ffa930, e = 0x7fa7b1ffa930}}}
      #31 0x00007fa8b75e8929 in CPlusPlus::FunctionDefinitionAST::accept0 (this=0x7fa7d1b71c18, visitor=0xe0b6dc0) at /home/nikolai/dev/creator/qtcreator-cron/src/libs/3rdparty/cplusplus/ASTVisit.cpp:471
      No locals.
      #32 0x00007fa8b75e3754 in CPlusPlus::AST::accept (this=0x7fa7d1b71c18, visitor=0xe0b6dc0) at /home/nikolai/dev/creator/qtcreator-cron/src/libs/3rdparty/cplusplus/AST.cpp:51
      No locals.
      #33 0x00007fa8b75e7e71 in accept (visitor=0xe0b6dc0, ast=<optimized out>) at /home/nikolai/dev/creator/qtcreator-cron/src/libs/3rdparty/cplusplus/AST.h:93
      
      No locals.
      #34 accept<CPlusPlus::DeclarationAST*> (visitor=0xe0b6dc0, it=0x7fa7d1b64e90) at /home/nikolai/dev/creator/qtcreator-cron/src/libs/3rdparty/cplusplus/AST.h:99
      
      No locals.
      #35 CPlusPlus::ClassSpecifierAST::accept0 (this=0x7fa7d1b71170, visitor=0xe0b6dc0) at /home/nikolai/dev/creator/qtcreator-cron/src/libs/3rdparty/cplusplus/ASTVisit.cpp:273
      No locals.
      #36 0x00007fa8b75e3754 in CPlusPlus::AST::accept (this=0x7fa7d1b71170, visitor=0xe0b6dc0) at /home/nikolai/dev/creator/qtcreator-cron/src/libs/3rdparty/cplusplus/AST.cpp:51
      No locals.
      #37 0x00007fa8b7a05c8d in CPlusPlus::ASTVisitor::accept<CPlusPlus::SpecifierAST*> (this=0xe0b6dc0, it=0x7fa7d1b64fe8) at /home/nikolai/dev/creator/qtcreator-cron/src/libs/3rdparty/cplusplus/ASTVisitor.h:70
      
      No locals.
      #38 0x00007fa8b7a00f55 in CppTools::CheckSymbols::visit (this=0xe0b6dc0, ast=0x7fa7d1b65000) at /home/nikolai/dev/creator/qtcreator-cron/src/plugins/cpptools/cppchecksymbols.cpp:523
              declrIdNameAST = 0x0
      #39 0x00007fa8b75e7529 in CPlusPlus::SimpleDeclarationAST::accept0 (this=0x7fa7d1b65000, visitor=0xe0b6dc0) at /home/nikolai/dev/creator/qtcreator-cron/src/libs/3rdparty/cplusplus/ASTVisit.cpp:104
      No locals.
      #40 0x00007fa8b75e3754 in CPlusPlus::AST::accept (this=0x7fa7d1b65000, visitor=0xe0b6dc0) at /home/nikolai/dev/creator/qtcreator-cron/src/libs/3rdparty/cplusplus/AST.cpp:51
      No locals.
      #41 0x00007fa8b75e8d59 in accept (visitor=0xe0b6dc0, ast=<optimized out>) at /home/nikolai/dev/creator/qtcreator-cron/src/libs/3rdparty/cplusplus/AST.h:93
      No locals.
      #42 accept<CPlusPlus::DeclarationAST*> (visitor=0xe0b6dc0, it=0x7fa7d1b65030) at /home/nikolai/dev/creator/qtcreator-cron/src/libs/3rdparty/cplusplus/AST.h:99
      No locals.
      #43 CPlusPlus::LinkageBodyAST::accept0 (this=0x7fa7d1b71098, visitor=0xe0b6dc0) at /home/nikolai/dev/creator/qtcreator-cron/src/libs/3rdparty/cplusplus/ASTVisit.cpp:543
      
      No locals.
      #44 0x00007fa8b75e3754 in CPlusPlus::AST::accept (this=0x7fa7d1b71098, visitor=0xe0b6dc0) at /home/nikolai/dev/creator/qtcreator-cron/src/libs/3rdparty/cplusplus/AST.cpp:51
      No locals.
      #45 0x00007fa8b75e9234 in accept (visitor=0xe0b6dc0, ast=<optimized out>) at /home/nikolai/dev/creator/qtcreator-cron/src/libs/3rdparty/cplusplus/AST.h:93
      No locals.
      #46 CPlusPlus::NamespaceAST::accept0 (this=0x7fa7d1b71068, visitor=0xe0b6dc0) at /home/nikolai/dev/creator/qtcreator-cron/src/libs/3rdparty/cplusplus/ASTVisit.cpp:633
      No locals.
      #47 0x00007fa8b75e3754 in CPlusPlus::AST::accept (this=0x7fa7d1b71068, visitor=0xe0b6dc0) at /home/nikolai/dev/creator/qtcreator-cron/src/libs/3rdparty/cplusplus/AST.cpp:51
      No locals.
      #48 0x00007fa8b75ea1a9 in accept (visitor=0xe0b6dc0, ast=<optimized out>) at /home/nikolai/dev/creator/qtcreator-cron/src/libs/3rdparty/cplusplus/AST.h:93
      No locals.
      #49 accept<CPlusPlus::DeclarationAST*> (visitor=0xe0b6dc0, it=0x7fa7d1b65048) at /home/nikolai/dev/creator/qtcreator-cron/src/libs/3rdparty/cplusplus/AST.h:99
      No locals.
      #50 CPlusPlus::TranslationUnitAST::accept0 (this=0x7fa7d1312ff0, visitor=0xe0b6dc0) at /home/nikolai/dev/creator/qtcreator-cron/src/libs/3rdparty/cplusplus/ASTVisit.cpp:927
      No locals.
      #51 0x00007fa8b75e3754 in CPlusPlus::AST::accept (this=0x7fa7d1312ff0, visitor=0xe0b6dc0) at /home/nikolai/dev/creator/qtcreator-cron/src/libs/3rdparty/cplusplus/AST.cpp:51
      No locals.
      #52 0x00007fa8b7a00380 in CppTools::CheckSymbols::run (this=0xe0b6dc0) at /home/nikolai/dev/creator/qtcreator-cron/src/plugins/cpptools/cppchecksymbols.cpp:338
              collectTypes = {<CPlusPlus::SymbolVisitor> = {_vptr.SymbolVisitor = 0x7fa8b7cc4410 <vtable for (anonymous namespace)::CollectSymbols+16>}, _doc = {value = 0x7fa7d1b52aa0, d = 0x7fa7d1a70f40}, _snapshot = {_documents = {{d = 0x7fa764a70530, e = 0x7fa764a70530}}}
      , _types = {q_hash = {{d = 0x7fa78c9a2200, e = 0x7fa78c9a2200}}}, _fields = {q_hash = {{d = 0x7fa78c01fc60, e = 0x7fa78c01fc60}}}, _functions = {q_hash = {{d = 0x7fa78c023aa0, e = 0x7fa78c023aa0}}}, _statics = {q_hash = {{d = 0x7fa78d7b25c0, e = 0x7fa78d7b25c0}}}, _mainDocument = true}
      #53 0x00007fa8cca57eb9 in QThreadPoolThread::run (this=0x7fa7c50c1540) at thread/qthreadpool.cpp:100
              autoDelete = true
              r = 0xe0b6dd0
              expired = false
              locker = {val = 23960480}
              __PRETTY_FUNCTION__ = "virtual void QThreadPoolThread::run()"
      #54 0x00007fa8cca5dd6f in QThreadPrivate::start (arg=0x7fa7c50c1540) at thread/qthread_unix.cpp:333
              __clframe = {__cancel_routine = 0x7fa8cca5de04 <QThreadPrivate::finish(void*)>, __cancel_arg = 0x7fa7c50c1540, __do_it = 1, __cancel_type = 32679}
              thr = 0x7fa7c50c1540
              data = 0x7fa7c53cf320
              objectName = {static null = {<No data fields>}, d = 0x7fa7c42b4330}
      #55 0x00007fa8caa40734 in ?? () from /usr/lib/nvidia-current/libGL.so.1
      No symbol table info available.
      #56 0x00007fa8cc779e9a in start_thread (arg=0x7fa7b1ffb700) at pthread_create.c:308
              __res = <optimized out>
              pd = 0x7fa7b1ffb700
              now = <optimized out>
              unwind_buf = {cancel_jmp_buf = {{jmp_buf = {0, -230228422250214948, 140356846872624, 140358222592448, 0, 3, 252610078278142428, 261077487651637724}, mask_was_saved = 0}}, priv = {pad = {0x0, 0x0, 0x0, 0x0}, data = {prev = 0x0, cleanup = 0x0, canceltype = 0}}}
              not_first_call = 0
              pagesize_m1 = <optimized out>
              sp = <optimized out>
              freesize = <optimized out>
              __PRETTY_FUNCTION__ = "start_thread"
      #57 0x00007fa8cbf8dcbd in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:112
      No locals.
      #58 0x0000000000000000 in ?? ()
      No symbol table info available.
      
      

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            kosjar Nikolai Kosjar
            kosjar Nikolai Kosjar
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes